# voice-pipeline-bench

./: LICENSE  README.md  conftest.py  pyproject.toml
asr/: base.py  faster_whisper_asr.py
benchmark/: run_asr_benchmark.py  run_benchmark.py  run_llm_benchmark.py  run_tts_benchmark.py
configs/: benchmark_config.yaml  llm_benchmark_config.yaml  tts_benchmark_config.yaml
llm/: base.py  vllm_llm.py
pipeline/: profiler.py
results/: asr_benchmark_20260417_082605.json  asr_benchmark_20260420_072415.json  llm_benchmark_20260420_050327.json  tts_benchmark_20260420_071527.json
tts/: base.py  edge_tts_tts.py  kokoro_tts.py
